// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-menu-item renders with default props 1`] = `
<modus-wc-menu-item label="Test label" value="Test value">
  <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem">
    <button type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with custom props 1`] = `
<modus-wc-menu-item bordered="true" custom-class="test-class" disabled="true" label="Test label" selected="true" size="lg" start-icon="check" sub-label="Test sub-label" value="Test value">
  <li aria-current="" aria-disabled="" class="modus-wc-menu-item modus-wc-menu-item-bordered modus-wc-menu-item-disabled modus-wc-menu-item-lg modus-wc-menu-item-selected test-class" role="menuitem">
    <button disabled="" type="button">
      <div class="modus-wc-menu-item-content">
        <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
          <i aria-hidden="true" class="modus-icons modus-wc-icon--md modus-wc-menu-item-start-icon" tabindex="-1">
            check
          </i>
        </modus-wc-icon>
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
          <div class="modus-wc-menu-item-sublabel">
            Test sub-label
          </div>
        </div>
        <div class="modus-wc-menu-item-selected-icon">
          <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
            <i aria-hidden="true" class="modus-icons modus-wc-icon--md" tabindex="-1">
              check
            </i>
          </modus-wc-icon>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with size lg 1`] = `
<modus-wc-menu-item label="Test label" selected="true" size="lg" value="Test value">
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-lg modus-wc-menu-item-selected" role="menuitem">
    <button type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
        <div class="modus-wc-menu-item-selected-icon">
          <modus-wc-icon decorative="" name="check" size="md"></modus-wc-icon>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with size md 1`] = `
<modus-wc-menu-item label="Test label" selected="true" size="md" value="Test value">
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-md modus-wc-menu-item-selected" role="menuitem">
    <button type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
        <div class="modus-wc-menu-item-selected-icon">
          <modus-wc-icon decorative="" name="check" size="sm"></modus-wc-icon>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;

exports[`modus-wc-menu-item should render with size sm 1`] = `
<modus-wc-menu-item label="Test label" selected="true" size="sm" value="Test value">
  <li aria-current="" class="modus-wc-menu-item modus-wc-menu-item-selected modus-wc-menu-item-sm" role="menuitem">
    <button type="button">
      <div class="modus-wc-menu-item-content">
        <div class="modus-wc-menu-item-labels">
          <div>
            Test label
          </div>
        </div>
        <div class="modus-wc-menu-item-selected-icon">
          <modus-wc-icon decorative="" name="check" size="xs"></modus-wc-icon>
        </div>
      </div>
    </button>
  </li>
</modus-wc-menu-item>
`;
